Add windows build commands

--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
         "streamdeck"
     ],
     "scripts": {
-        "build": "pkg app.js && mv app-macos app && mv app-win.exe app.exe && cp app app.exe ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin/ && cp -rf propertyinspector/* ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin/propertyinspector/ && cp manifest.json ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin/",
-        "copyHTML": "cp -rf propertyinspector/* ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin/propertyinspector/",
-        "copyImages": "cp -rf Images/* ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin/Images/",
-        "exportPlugin": "build/DistributionTool -b -i ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin -o build/Release/"
+        "build-win": "npm run cleanRelease && npm run pkg && npm run copyApp-win && npm run copyHTML-win && npm run copyImages-win && npm run exportPlugin-win",
+        "build-mac": "npm run cleanRelease && npm run pkg && npm run copyApp-mac && npm run copyHTML-mac && npm run copyImages-mac && npm run exportPlugin-mac",
+        "cleanRelease": "rm ./build/Release/*",
+        "pkg": "pkg app.js && mv app-macos app && mv app-win.exe app.exe",
+        "copyApp-mac": "cp app app.exe ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin/ && cp -rf propertyinspector/* ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin/propertyinspector/ && cp manifest-mac.json ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin/manifest.json",
+        "copyApp-win": "cp app app.exe ./com.patrickdmiller.kef.sdPlugin/ && cp -rf propertyinspector/* ./com.patrickdmiller.kef.sdPlugin/propertyinspector/ && cp manifest-win.json ./com.patrickdmiller.kef.sdPlugin/manifest.json",
+        "copyHTML-mac": "cp -rf propertyinspector/* ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin/propertyinspector/",
+        "copyHTML-win": "cp -rf propertyinspector/* ./com.patrickdmiller.kef.sdPlugin/propertyinspector/",
+        "copyImages-mac": "cp -rf Images/* ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin/Images/",
+        "copyImages-win": "cp -rf Images/* ./com.patrickdmiller.kef.sdPlugin/Images/",
+        "exportPlugin-mac": "build/DistributionTool -b -i ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin -o build/Release/",
+        "exportPlugin-win": "build\\DistributionTool.exe -b -i ./com.patrickdmiller.kef.sdPlugin -o build/Release/"
     },
     "dependencies": {
         "args": "",
