--- a/package.json
+++ b/package.json
@@ -9,23 +9,25 @@
         "streamdeck"
     ],
     "scripts": {
-        "build-win": "npm run cleanRelease && npm run pkg && npm run copyApp-win && npm run copyHTML-win && npm run copyImages-win && npm run exportPlugin-win",
-        "build-mac": "npm run cleanRelease && npm run pkg && npm run copyApp-mac && npm run copyHTML-mac && npm run copyImages-mac && npm run exportPlugin-mac",
+        "build-win": "npm run cleanRelease && npm run pkg && npm run copyApp-win && npm run copyHTML && npm run copyImages && npm run exportPlugin-win",
+        "build-mac": "npm run cleanRelease && npm run pkg && npm run copyApp-mac && npm run copyHTML && npm run copyImages && npm run exportPlugin-mac",
         "cleanRelease": "rm -f ./build/Release/*",
         "pkg": "pkg app.js && mv app-macos app && mv app-win.exe app.exe",
-        "copyApp-mac": "cp app app.exe ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin/ && cp -rf propertyinspector/* ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin/propertyinspector/ && cp manifest-mac.json ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin/manifest.json",
+        "copyApp-mac": "cp app app.exe ./com.patrickdmiller.kef.sdPlugin/ && cp -rf propertyinspector/* ./com.patrickdmiller.kef.sdPlugin/propertyinspector/ && cp manifest-mac.json ./com.patrickdmiller.kef.sdPlugin/manifest.json",
         "copyApp-win": "cp app app.exe ./com.patrickdmiller.kef.sdPlugin/ && cp -rf propertyinspector/* ./com.patrickdmiller.kef.sdPlugin/propertyinspector/ && cp manifest-win.json ./com.patrickdmiller.kef.sdPlugin/manifest.json",
-        "copyHTML-mac": "cp -rf propertyinspector/* ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin/propertyinspector/",
-        "copyHTML-win": "cp -rf propertyinspector/* ./com.patrickdmiller.kef.sdPlugin/propertyinspector/",
-        "copyImages-mac": "cp -rf Images/* ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin/Images/",
-        "copyImages-win": "cp -rf Images/* ./com.patrickdmiller.kef.sdPlugin/Images/",
-        "exportPlugin-mac": "build/DistributionTool -b -i ~/Library/Application\\ Support/com.elgato.StreamDeck/Plugins/com.patrickdmiller.kef.sdPlugin -o build/Release/",
+        "copyHTML": "cp -rf propertyinspector/* ./com.patrickdmiller.kef.sdPlugin/propertyinspector/",
+        "copyImages": "cp -rf Images/* ./com.patrickdmiller.kef.sdPlugin/Images/",
+        "exportPlugin-mac": "sd-distribution-tool -b -i ./com.patrickdmiller.kef.sdPlugin -o build/Release/",
         "exportPlugin-win": "build\\DistributionTool.exe -b -i ./com.patrickdmiller.kef.sdPlugin -o build/Release/"
     },
     "dependencies": {
         "args": "",
+        "kef-wireless-js": "",
         "simple-node-logger": "",
-        "websocket": "",
-        "kef-wireless-js": ""
+        "websocket": ""
+    },
+    "devDependencies": {
+        "pkg": "^5.8.0",
+        "stream-deck-distribution-tool": "^1.0.1"
     }
 }
